--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ header {
   align-items: center;
   width: 100%;
   max-width: 80rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 .logo {
@@ -38,7 +38,7 @@ header {
 nav {
   display: flex;
   justify-content: center;
-  gap: 50px;
+  gap: 10px;
 }
 
 nav a {
@@ -315,6 +315,7 @@ h2 {
   transform: translateY(-2px);
 }
 
+
 @media (max-width: 600px) {
   .cv-button {
     padding: 0.45rem 0.7rem;
@@ -338,6 +339,7 @@ h2 {
     grid-template-columns: repeat(3, 1fr);
   }
 }
+
 
 /* End of style.css */
 
@@ -437,8 +439,79 @@ h2 {
   }
 }
 
+/* CONTACT FORM */
+.section-5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  gap: 0.7rem;
+  max-width: 900px;
+  margin: auto;
+  border-radius: 20px;
+}
+
+form{
+  background-color: rgba(255, 255, 255, 0.08);
+  backdrop-filter: blur(18px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+  border-radius: 20px;
+  padding: 1.5rem;
+  transition: transform 0.5s, box-shadow 0.5s;
+  margin-top: 20px;
+}
+
+.input::placeholder,
+.textarea::placeholder {
+  color: rgba(255, 255, 255, 0.747);
+}
+
+input, textarea{
+  width: 100%;
+  color: white;
+  padding: 14px 16px;
+  margin-bottom: 9px;
+  border-radius: 14px;
+  background-color: rgba(255, 255, 255, 0.08);
+  backdrop-filter: blur(18px);
+  border: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+button {
+  padding: 14px;
+  border-radius: 16px;
+  cursor: pointer;
+  background: linear-gradient(
+    135deg,
+  rgba(255, 0, 0, 0.55),   
+  rgb(202, 37, 59),    
+  rgba(190, 25, 25, 0.836)  
+  );
+  border: none;
+  color: white;
+  font-size: 1.05rem;
+  font-weight: bold;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.contact-form button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 30px rgba(0, 212, 255, 0.4);
+}
+
+/* FOOTER */
+
+footer {
+  text-align: center;
+  padding: 20px;
+  opacity: 0.7;
+}
 
 
 
-
+@media (max-width: 600px) {
+  #contact {
+    padding: 1.5rem;
+  }
+}
 
